add workshop2 :sob:

--- a/workshop1.ipynb
+++ b/workshop1.ipynb
@@ -2,10 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "fe03ba42",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5 7 9]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([2. , 2.5, 3. ])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Vector addition using numpy\n",
     "import numpy as np\n",
@@ -33,17 +51,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "60a974a3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1092df650>]"
+       "[<matplotlib.lines.Line2D at 0x11ba8a190>]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -75,17 +93,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "8c2535df",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "list"
+       "[<matplotlib.lines.Line2D at 0x11c0dda10>]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -110,17 +128,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "f13fa522",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tuple"
+       "[<matplotlib.lines.Line2D at 0x11c1e3510>]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
